--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ShoppersUi</title>
+  <title>Shoppers</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/@clr/ui@16.0.0/clr-ui.min.css" />
 </head>
-<body cds-theme="dark">
+<body cds-theme="light">
   <app-root></app-root>
 </body>
 </html>
+
